workshops/01-service-mesh/deploy/base/03-traffic/frontend-peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: frontend-permissive
  namespace: retailflow
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  mtls:
    mode: PERMISSIVE
