workshops/01-service-mesh/deploy/base/03-traffic/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: retailflow
spec:
  mtls:
    mode: STRICT
