workshops/01-service-mesh/deploy/base/03-traffic/catalog-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: catalog
  namespace: retailflow
spec:
  hosts:
    - catalog
  http:
    - timeout: 3s
      retries:
        attempts: 2
        perTryTimeout: 1s
        retryOn: gateway-error,connect-failure,retriable-4xx
      route:
        - destination:
            host: catalog
