workshops/01-service-mesh/deploy/base/03-traffic/payments-destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: payments
  namespace: retailflow
spec:
  host: payments
  subsets:
    - name: v1
      labels:
        app.kubernetes.io/version: "v1"
    - name: v2
      labels:
        app.kubernetes.io/version: "v2"
