workshops/01-service-mesh/deploy/base/03-traffic/authz-payments.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: payments-allow-orders-only
  namespace: retailflow
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: payments
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/retailflow/sa/orders
      to:
        - operation:
            methods: ["POST", "GET"]
